Feat: user temp token
